# enhanced-deforum-music-generator

./: .env.template  .gitattributes  .gitignore  .gitmodules  README.md  README.txt  RUN_ME.bat  __init__.py  a1111_deforum_music.py  ai_nlp_demo_app.tsx  audio_reactive_generator.tsx  bootstrap_all.py  config.json  custom.yaml  deploy.py  docker-compose.yml  environment-cuda.yml  environment-full-cuda.yml  environment.yml  file_list.txt  install.ps1  install.sh  installer_gui.py  installer_gui_extended.py  patch_and_setup.ps1  patch_and_setup.sh  patch_init.py  pyproject.toml  pytest.ini  requirements-cuda.txt  requirements-full-cuda.txt  requirements-full.txt  requirements-minimal.txt  requirements.txt  run_me.sh  run_with_env.ps1  selfcheck.py  setup.py  sitecustomize.py  start.bat  (+2 more)
a1111_extension/: README.md  install.py  requirements.txt
comfyui_workflows/: README.md  manifest.json
config/: __init__.py  config_system.py
core/: __init__.py  audio_analyzer.py  nlp_processor.py  scheduler.py
docs/: AI_INTEGRATION.md  AUTO_INSTALL.md  BENCHMARKING.md  BOOTSTRAP_ALL.md  COMFYUI_WORKFLOWS.md  GUI_INSTALLER.md  HF_VIDEO_MODELS.md  README.md
edmg/: __init__.py  __main__.py
integrations/: __init__.py  a1111_connector.py
juce_example/: CMakeLists.txt  README.md
juce_example/src/: main.cpp
librosa/: __init__.py
scripts/: edmg_installer.py  fetch_comfyui_workflows.py  run_api.py  run_video_diffusers.py  smoke_check.py  video_model_bench.py  wire_comfyui_models.py
src/: __init__.py
tests/: conftest.py  test_audio_analyzer.py  test_comfyui_model_wiring.py  (+4 more)
(+70 files in other folders)
